add share button

--- a/src/panels/home.css
+++ b/src/panels/home.css
@@ -10,3 +10,15 @@
   margin-top: 8px;
   margin-bottom: 8px;
 }
+.SimpleCell .Avatar__shadow {
+  box-shadow: none !important;
+}
+
+.SimpleCell .Avatar__img {
+  border-radius: 0 !important;
+  background: none !important;
+}
+
+.profile__invite {
+  margin: 8px 0;
+}
