--- a/src/panels/intro.css
+++ b/src/panels/intro.css
@@ -72,3 +72,18 @@
     border-radius: 50% 60% 70% 30% / 47% 62% 68% 53%;
   }
 }
+.intro__category {
+  width: 100%;
+  border: 1px solid var(--accent);
+  border-radius: 3px;
+  margin-bottom: 8px;
+}
+
+.intro__category--active {
+  border: 1px solid var(--button_commerce_background);
+}
+
+.intro__gallery {
+  width: 100%;
+  height: 100vh;
+}
