--- a/src/panels/intro.css
+++ b/src/panels/intro.css
@@ -6,6 +6,10 @@
   position: relative;
 }
 
+.slide .vkuiSimpleCell__children {
+  color: black;
+}
+
 .slide__title {
   margin-top: -48px;
   text-align: center;
@@ -14,21 +18,19 @@
 
 .slide__image {
   width: 60%;
-  max-width: 130px;
+  max-width: 200px;
+  padding: 0 16px;
   background-size: contain;
   background-repeat: no-repeat;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .slide__text {
-  text-align: center;
   margin-top: 24px;
   padding: 0 16px;
-  line-height: 1.5em;
+  line-height: 1.4em;
+  font-weight: 600;
   max-width: 400px;
+  font-size: 16px;
 }
 
 .slide__button-holder {
@@ -41,20 +43,6 @@
   width: 100%;
   max-width: 480px;
   margin: 0 auto;
-}
-
-.blob {
-  margin: 0 auto;
-  width: 60vw;
-  height: 60vw;
-  max-width: 280px;
-  max-height: 280px;
-  background: var(--background_light);
-  animation: animate 5s linear infinite;
-}
-
-.blob-holder {
-  position: relative;
 }
 
 @keyframes animate {
@@ -74,16 +62,38 @@
 }
 .intro__category {
   width: 100%;
-  border: 1px solid var(--accent);
+  border: 2px solid var(--accent);
   border-radius: 3px;
   margin-bottom: 8px;
+  width: calc(100vw - 80px);
 }
 
 .intro__category--active {
-  border: 1px solid var(--button_commerce_background);
+  border: 2px solid var(--button_commerce_background);
+  background-color: rgba(22, 216, 80, 0.1);
+}
+.intro__category--disabled {
+  opacity: 0.8;
+  pointer-events: none;
+  cursor: not-allowed;
 }
 
 .intro__gallery {
   width: 100%;
   height: 100vh;
+}
+
+.Gallery__slide {
+  background-image: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url("../img/bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: black;
+}
+.vkuiGallery__layer {
+  background-color: white;
 }
